--- a/css/styles.css
+++ b/css/styles.css
@@ -316,8 +316,43 @@ html {
   height: 100%; }
 
 body {
-  /* font-family: ''; */
-  font-size: 1.8rem;
+  font-family: 'Arial', sans-serif;
+  font-size: 2.4rem;
   line-height: 1.6;
   color: #333;
-  min-height: 100%; }
+  background-color: #f5e9bc;
+  min-height: 100%;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+#myDiv,
+#myTextarea {
+  border: 1px solid #333;
+  width: 50%; }
+
+#myDiv {
+  word-wrap: break-word;
+  padding: 20px; }
+
+#myTextarea {
+  height: 30%;
+  color: #333;
+  outline: none;
+  background-color: transparent; }
+
+.hint {
+  font-size: 2rem;
+  position: absolute;
+  bottom: 30px; }
